--- a/css/quiz1.css
+++ b/css/quiz1.css
@@ -1,5 +1,5 @@
 body{
-    background: url(/assets/cinema.webp) center/cover repeat;
+    background: url(/assets/cinema.jpg) center/cover repeat;
 }
 .container{
     margin: 50px;
